# demobit

./: .gitignore  Cargo.toml  DEV.txt  LICENSE  README  build.rs  sync_api.proto
data/: commit_log  repo_details
data/storage_details/: demo  demo_a  demo_b
proto/: api.proto
src/: fs.rs  lib.rs  prelude.rs  server.rs  sync.rs  sync_api.rs  v3.rs  v4.rs
src/old/: _main.rs  v1.rs  v2.rs
