[package]
edition = "2021"
name = "Storage"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
chrono = {version = "*", features = ["serde"]}
hex-literal = "*"
schemars = {version = "0.8.11", features = ["chrono"]}
serde = {version = "1.0.147", features = ["derive"]}
serde_json = "1.0.89"
sha1 = "0.10.0"
tonic = "0.8.2"
uuid = {version = "*", features = ["v4", "serde"]}
