[package]
edition = "2021"
name = "storage"
version = "0.1.0"

[dependencies]
bincode = "1.3.3"
chrono = {version = "*", features = ["serde"]}
hex-literal = "*"
prost = {version = "*", optional = true}
schemars = {version = "0.8.11", features = ["chrono"]}
serde = {version = "1.0.147", features = ["derive"]}
serde_json = "1.0.89"
sha1 = "0.10.0"
tokio = {version = "*", features = ["macros"], optional = true}
tonic = {version = "*", optional = true, features = ["prost"]}
uuid = {version = "*", features = ["v4", "serde"]}

[build-dependencies]
tonic-build = {version = "*", features = ["prost"]}
