[package]
edition = "2021"
name = "storage"
version = "0.1.0"

[dependencies]
bincode = "1.3.3"
chrono = {version = "0.4.23", features = ["serde"]}
hex-literal = "0.3.4"
prost = {version = "0.11"}
schemars = {version = "0.8.11", features = ["chrono"]}
serde = {version = "1.0.147", features = ["derive"]}
serde_json = "1.0.89"
sha1 = "0.10.0"
tokio = {version = "1.25.0", features = ["macros", "rt"]}
tokio-stream = "0.1.11"
tonic = {version = "0.8"}
uuid = {version = "1.2.2", features = ["v4", "serde"]}

[build-dependencies]
tonic-build = {version = "0.8"}
